--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Hello, world! Webpage</h1>
     <p>Hello, World!</p>
-    <img src="./images/hello_world (1).png" alt="Hello, World!" />
+    <img src="./images/hello_world.png" alt="Hello, World!" />
     <p>
       <a href="./genesis.html">The old Testament, Genesis, Chapter 1 </a>
     </p>
